--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,10 +14,9 @@ author :
   email : dequadros@programmer.net
   github : antiframes
   twitter : antiquadros
-  feedburner : nil
-
+  
 # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-production_url : http://antiframes.github.io/sentinelaDosPampas/
+production_url : https://antiframes.github.io/sentinelaDosPampas
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
@@ -52,7 +51,7 @@ JB :
   #     This means always setting the protocol (http|https) or prefixing with "/"
   #
   # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-  BASE_PATH : http://antiframes.github.io/sentinelaDosPampas/
+  BASE_PATH : https://antiframes.github.io/sentinelaDosPampas
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
