--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@ production_url : https://antiframes.github.io/sentinelaDosPampas
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
 markdown: kramdown
-baseurl: /sentinelaDosPampas
+baseurl: /sentinelaDosPampas/docs
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
